--- a/Exercises/GreetByName/index.html
+++ b/Exercises/GreetByName/index.html
@@ -11,6 +11,6 @@
     <p> Name <input type="text" id="nameField" /> </p>
     <p><input id="greetButton" type="button" value="Greet the User" /></p>
     
-    <script src="index.js"></script>
+    <script src="./Scripts/index.js"></script>
 </body>
 </html>
